# autonomous-orchestrator

./: .gitignore  LICENSE  README.md  __main__.py  agents.py  commands.json  config.example.yaml  config.yaml  orchestrator.py  pyproject.toml  quickstart.sh  requirements.txt  run.sh  setup.py  stripe_agent.py  test_integration.py
junction/: README.md  __init__.py  bridge.py  j09_agent.py  router.py  translator.py
tests/: __init__.py  test_orchestrator.py
